<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="GVL_ErrorSystem" Id="{7f2dfaa6-e4ea-4ad1-ac0d-e75f78e9d4ec}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	cSizeOfErrorData : UINT := 128;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>